compiler/src/test/resources/amyc/parser/failing/ClassDefError4.grading.amy
object ClassDef
  case class Foo(Int, y: Int) extends Bar
end ClassDef
